Se cambió imagen de presentación

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <section class="section background-1">
             <h1>
                 Music
-                <i class="fas fa-play"></i>
+                <i class="fas fa-music"></i>
             </h1>
             <h2 class="subtitle">Enjoy the wonderful world</h2>
             <button class="button white-button">
